--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -22,7 +22,7 @@
                     Create New Page
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'random-page' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
