--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -20,7 +20,7 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'create-new-page' %}">Create New Page</a>
                 </div>
                 <div>
                     <a href="{% url 'random-page' %}">Random Page</a>
