--- a/encyclopedia/templates/encyclopedia/edit_page.html
+++ b/encyclopedia/templates/encyclopedia/edit_page.html
@@ -8,7 +8,7 @@
     <h1>{{ title }}</h1>
     <form action="" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <input type="submit" value="Submit" />
     </form>
 
